@@ -82,6 +82,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 26733) Wrap initial table creation in transaction
 * (bug 26729) Category pages should return 404 if they do not exist and have no
   members.
+* (bug 2585) Image pages should send 404 if no image, no shared image and no
+  description page.
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
